package hole_filling;

/**
 * Consts class
 */

public class Consts {
    public static final double PIXEL_INTENSITY_VALUE = 0.5;
    public static final float HOLE_VALUE = -1f;
    public static final int K = 60;
}

